@@ -1,10 +1,10 @@
-417f25e788b6acfbe70f136b5c632ca4 *DESCRIPTION
-23ae59c515ea74c2bb049808b59dffff *INDEX
-7e42d50754b35d3589e4b532f3248b3d *NAMESPACE
-a485a0784956fc84e386dd4e15dda9c2 *NEWS
+17cc280f9be997060d34980546a266e0 *DESCRIPTION
+8b26a783d04fcb4dca91c9ef1c313d6e *INDEX
+adbbf8a879b55a2f3917e07debb6b259 *NAMESPACE
+697c16940445347f50270af9031d3097 *NEWS
 2c74abe5f355af8948fa9087f56959c9 *R/ablineclip.R
 54f531a76de0b83b120f3f6a15108f4e *R/add.ps.R
-0634284ec2877e77def4445dc8e754f5 *R/addtable2plot.R
+16dbabf2b032f3c4aa5f27503ae6540c *R/addtable2plot.R
 214995b84004be3bd42e51de47bf2105 *R/arctext.R
 fab32acaa7362918ba978d5ea0df6180 *R/axis.break.R
 93b3e6deb1c3e93f5eef5d2d251c5f38 *R/axis.mult.R
@@ -55,6 +55,7 @@ e7dfcfd5f8e952b90c996869302de82a *R/gap.plot.R
 30440670860262b4287ee6de35cc675d *R/getIntersectList.R
 f62328458fae81303b94fbb7287175c6 *R/getMarginWidth.R
 39c5a2ab540444944f48a55f990045e6 *R/gradient.rect.R
+b0b3bdb2717ca64c5b72a3a4a10d36b5 *R/histStack.R
 1f5757f389bb8be01efe273ee228f1bd *R/intersectDiagram.R
 0c0c4a957e0acc1f78cc56f1aef4ac4b *R/kiteChart.R
 d4f22f0d1204a8436c58bef182abbeb4 *R/labbePlot.R
@@ -68,8 +69,9 @@ f88facb736d50a863537818e29e9098f *R/lengthKey.R
 0922537b9c49e3cc345347e46e7087b4 *R/multsymbolbox.R
 53fc688fbe92d2f624a881d24a2745a0 *R/panes.R
 52304cbd2133a98368562034e500fa70 *R/paxis3d.R
-2b4741fbf98c46dbfdf94ede60352d4f *R/pie3D.R
+fbdb3446eaf9b5479acfa9005247dfbd *R/pie3D.R
 b9a64d1b0d4f890dbc817c1172fec476 *R/plotCI.R
+d81ea105e35ed97f34aa697445006b82 *R/plotH.R
 960aae874cd12958dd6dccde3558879d *R/plot_bg.R
 f10e1defb3c27cbd4459f322752389f0 *R/polygon.shadow.R
 2b78bf63748a8f8f9bae8fd4abd104c1 *R/pyramid.plot.R
@@ -162,7 +164,7 @@ e0cf4b49c5d11ec218ef091e3766443c *man/drawSectorAnnulus.Rd
 ff9c5395618869a65b04d6400b0cf2c4 *man/ehplot.Rd
 4eb5b9648e8de073082c4d98fbb108af *man/emptyspace.Rd
 eda164aa9c06d80b10e758a871950649 *man/fan.plot.Rd
-24342cd10fb35b3705b5c072bac27c6f *man/feather.plot.Rd
+fffabb21a837f2c1263dc71d2911f3d0 *man/feather.plot.Rd
 bdae42dc4d20b644e9d9015e95ccc3f2 *man/floating.pie.Rd
 ef0018a2314c3b5bf4d0e953ae036aed *man/fullaxis.Rd
 d4c458f97727e45e3deec31be4f67a18 *man/furc.Rd
@@ -181,6 +183,7 @@ b38bf1ec364fc7e0d352d23949ff09d8 *man/get.triprop.Rd
 81b41e59e8fdb64a7819ee5e5a1bad56 *man/get_axispos3d.Rd
 165ea94083e1eaf7285da55db8094314 *man/gradient.rect.Rd
 722a32a1697eac6a2d3d1b656c9e91a1 *man/hexagon.Rd
+22245bc76aae5426664addcec8114c43 *man/histStack.Rd
 7895180e7374acb2b0c255421ba56e2f *man/intersectDiagram.Rd
 055fb77f6c128cd174b0e3620ae82e8e *man/kiteChart.Rd
 47d8e24c27f66b5d9bb08cec09bcee56 *man/labbePlot.Rd
@@ -205,6 +208,7 @@ eef697b49dae65a5df9bd465549963fb *man/pie.labels.Rd
 9209e3496d57207f40745b435e473b03 *man/pie3D.labels.Rd
 4ebf99e8a0238ba7bacbcaa8af75f9e2 *man/plot.dendrite.Rd
 94da9e98fdf1f64739b188fea1f021f6 *man/plotCI.Rd
+64665bf5d11d49c15c04393ae0a8fe7f *man/plotH.Rd
 d0be8d8872d21c55c387ed117d60bc92 *man/plot_bg.Rd
 205c4049d34feca3d7c8cd7c55648547 *man/polar.plot.Rd
 aacd4acbdc1275ecff45c6d962ae8f16 *man/polygon.shadow.Rd
